XP en bonus en fonction des ages, possibilité de choisir les ages disponibles à la création, choix des compétence lors de la création d'un personnage.

--- a/src/LarpManager/Views/age/fragment/list.twig
+++ b/src/LarpManager/Views/age/fragment/list.twig
@@ -7,6 +7,7 @@
 	{%  endif %}
 	{%  for age in ages %}
 	<li class="list-group-item">
+		
 		<h4 class="list-group-item-heading">
 			{{ age.label }}
 			<div class="pull-right btn-group" role="group" aria-label="...">
@@ -14,6 +15,13 @@
 			    <a href="{{ path('age.update', {index: age.id}) }}" class="btn btn-default" role="button">Modifier</a>
 			</div>
 		</h4>
+		
+		{% if age.enableCreation %}
+		<p class="list-group-item-text text-info">
+			Age disponible lors de la création d'un personnage.
+		</p>
+		{% endif %}
+		
 		<p class="list-group-item-text">		
 		</p>	
 		{% if age.description %}
@@ -21,6 +29,7 @@
 		{% else %}
 			<p class="list-group-item-text text-warning">Attention, cet age n'a pas description</p>
 		{%  endif %}
+		<p class="list-group-item-text text-default"><strong>XP en bonus : </strong>{{ age.bonus|default(0) }}</p>
 		
 	</li>
 	{%  endfor %}
