--- a/src/LarpManager/Views/groupe/place.twig
+++ b/src/LarpManager/Views/groupe/place.twig
@@ -6,7 +6,8 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
-			
+
+				<a href="{{ path("groupe") }}">Retour à la liste des groupes</a>			
 				<div class="well bs-component">
 				<form class="form-horizontal" action="{{ path('groupe.place') }}" method="POST">
 					<fieldset>
