--- a/src/LarpManager/Views/age/detail.twig
+++ b/src/LarpManager/Views/age/detail.twig
@@ -20,14 +20,40 @@
 		    	<div class="list-group-item">
 			    	<h4 class="list-group-item-heading">Description</h4>
 	    			<p class="list-group-item-text">
-	    			{% if not age.description %}
-    				<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-    					Attention, cet age n'a pas de description.
-    				{% else %}
-    					{{ age.description }}
-    				{% endif %}
+
+						<p>	    			
+		    			{% if not age.enableCreation %}
+		    				Cet age n'est pas disponible lors de la création d'un personnage.
+		    			{% else %}
+		    				Cet age est disponible lors de la création d'un personnage.
+		    			{% endif %}
+		    			</p>
+	    			
+	    				<p>
+		    			{% if not age.description %}
+	    				<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+	    					Attention, cet age n'a pas de description.
+	    				{% else %}
+	    					{{ age.description }}
+	    				{% endif %}
+	    				</p>
     				</p>
 	    		</div>
+	    		
+	    		<div class="list-group-item">
+	    			<h4 class="list-group-item-heading">XP en bonus</h4>
+	    			<p class="list-group-item-text">
+	    				{{ age.bonus|default(0) }}
+	    			</p>
+	    		</div>
+	    		
+	    		<div class="list-group-item">
+	    			<h4 class="list-group-item-heading"></h4>
+	    			<p class="list-group-item-text">
+	    				{{ age.bonus|default(0) }}
+	    			</p>
+	    		</div>
+	    		
 			</div>
 		</div>
 	</div>
