--- a/src/LarpManager/Views/gn/update.twig
+++ b/src/LarpManager/Views/gn/update.twig
@@ -1,15 +1,16 @@
 {% extends "layout.twig" %}
 
-{% block title %}Evénement{% endblock title %}
+{% block title %}Evénements{% endblock title %}
 
 {% block content %}
 
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
+				<a href="{{ path("gn") }}">Retour à la liste des événements</a>
 				{{ include("gn/fragment/form.twig",{
-					'legend': 'Ajout d\'un gn',
-					'action': path('gn.add'), 
+					'legend': 'Modification d\'un gn',
+					'action': path('gn.update',{'index':gn.id}),
 					'form' : form}) }}
 			</div>
 		</div>
