Creation de personnage : choix du niveau des compétences et décompte des points d'expérience.

--- a/src/LarpManager/Views/groupe/personnage/add.twig
+++ b/src/LarpManager/Views/groupe/personnage/add.twig
@@ -41,7 +41,8 @@
 								<div class="col-sm-6">
 									<div class="checkbox">
 										<label class>
-											<input name="competence[{{ competence.id }}]" id="{{ competence.id }}" type="checkbox" class="competence"><span  data-toggle="tooltip" title="{{ competence.description}}">{{ competence.nom }}</span>
+											<input name="competence[{{ competence.id }}]" index="{{ competence.id }}" type="checkbox" class="competence">
+											<span  data-toggle="tooltip" title="{{ competence.description}}">{{ competence.nom }}</span>
 										</label>
 									</div>
 								</div>
@@ -52,7 +53,7 @@
 					</div>
 					<div class="col-sm-6">
 						<div id="competenceList">
-							<h5>Vos compétences</h5>
+							<h5>Vos compétences <small><span id="xp">10</span> points d'expériences</small></h5>
 						</div>
 					</div>
 					
@@ -70,10 +71,11 @@
 	{{  parent() }}
 	<script>
 		var xp_initial = 10;
-		var competencesFavorites = {};
-		var competencesNormales = {};
-		var competenceCreations = {};
-
+		var xp = xp_initial;
+		var niveaux = {}; // liste des niveaux et leur cout
+		var competences = {}; // liste des competences
+		var competences_selection = []; // liste des competences choisies
+		
 		// mise à jour du panneau d'information sur la classe
 		var update_class_info = function(classeId) {
 			$.ajax({
@@ -83,73 +85,200 @@
 				})
 				.done(function(result) {
 					$('#classeInfo').fadeToggle("slow", function() {
-						competenceCreations = result.competenceCreations;
-						competenceNormales = result.competenceNormales;
-						competenceFavorites = result.competenceFavorites;
+						competences = result.competences;
+						niveaux = result.niveaux;
+
+						clean_competence_list();
+						init_competence_list();
 						
-						select_competence_creation();
 						$('#classeInfo').html(result.html);
 						$('#classeInfo').fadeToggle("slow");
 					});
 				});			
 		};
 
-		var select_competence_creation = function() {
+		// fourni le niveau actuelle d'une competence
+		var getCompetenceNiveau = function(index)
+		{
+			return competences_selection[index].niveau;
+		}
+		
+		// fourni le cout en xp pour une competence en fonction de son niveau
+		var getCompetenceCout = function(index,niveau)
+		{
+			if ( ! competences[index])	return niveaux[niveau].coutMeconnu;
+			var type = competences[index].type;
 
-			// nettoie la liste des competences 
-			$('input.competence').removeAttr('disabled');
-			$('input.competence').prop('checked', false);
-			$('input.competence').parent().removeClass('bg-success');
+			switch (type) {
+				case 'creation' : // on traite les competences acquises à la creation comme des compétence favorite
+					if (niveau == 1 ) return 0; // le premier niveau est gratuit
+				case 'favorite': 
+					return niveaux[niveau].coutFavori;
+					break;
+				case 'normale' :
+					return niveaux[niveau].coutNormal;
+					break;
+			}	
+		};
 
-			// passe en vert les competences favorites
-			for (var i = 0; i < competenceFavorites.length; i++) {
-				var checkbox = $('input.competence[name="competence['+competenceFavorites[i]+']"]');
-				$(checkbox).parent().addClass('bg-success');
-			}
+		// met à jour les points d'expériences
+		var update_xp = function()
+		{
+			$('span#xp').text(xp);
+		}
+		
+		// lorsque l'on choisi une compétence, celle-ci doit fournir le niveau "apprentit" au joueur
+		// et mettre à jour son compte de XP en fonction de la classe (compétences favorites, normales, acquise à la création)
+		var get_competence_info = function(competenceId) {
+			$.ajax({
+				'url': "{{ path('personnage.competence') }}",
+				'type' : 'get',
+				'data' : {competenceId: competenceId},
+				})
+				.done(function(result) {
+					
+				});
+		};
+		
+		// supprime les attribus visuels des competences et décoche toute les competences
+		var clean_competence_list = function() {
+			$('input.competence[type="checkbox"]').prop('checked', false); 
+			$('input.competence[type="checkbox"]').removeAttr('disabled');
+			$('input.competence[type="checkbox"]').parent().removeClass('bg-success');
+			$('input.competence[type="checkbox"]').parent().removeClass('bg-info');
+		};
 
-			// passe en bleu les competences normales
-			for (var i = 0; i < competenceNormales.length; i++) {
-				var checkbox = $('input.competence[name="competence['+competenceNormales[i]+']"]');
-				$(checkbox).parent().addClass('bg-info');
-			}
+		// indique visuellement quelles sont les competences favorites et normales
+		// et indique leur cout via un attribu
+		var init_competence_list = function() {
+
+			$('input.competence[type="checkbox"]').each(function() {
+				var id  = $(this).attr('index');
+				if ( competences[id] ) {
+					switch ( competences[id].type) {
+					case 'creation':
+						$(this).prop("checked", true);
+						$(this).attr("disabled",true);
+						$(this).parent().addClass('bg-success');
+						$(this).trigger('change');
+						break;
+					case 'favorite':
+						$(this).parent().addClass('bg-success');
+						break;
+					case 'normale':
+						$(this).parent().addClass('bg-info');
+					} 
+				}
+			});
+		};
+
+		// lorsqu'une competence est selectionner
+		var selection_competence = function(checkbox) {
 			
-			// coche les competences acquises à la creation
-			// et déclenche l'évenement "competence selectionné"
-			for (var i = 0; i < competenceCreations.length; i++) {
-				var checkbox = $('input.competence[name="competence['+competenceCreations[i]+']"]');
-				$(checkbox).parent().addClass('bg-success');
-				$(checkbox).prop("checked", true);
-				$(checkbox).attr("disabled",true);
-				$(checkbox).trigger('change');
+			// trouver le cout de la competence selectionné
+			var competenceId = $(checkbox).attr('index');
+			
+			cout = getCompetenceCout(competenceId,1); // pour obtenir le cout du premier niveau
+			
+			if ( xp - cout >= 0 ) { // le joueur a suffisement de xp
+
+				// ajoute la competence au niveau 1 dans sa selection
+				var newCompetence = {
+						index: competenceId,
+						niveau: 1
+				};
+				competences_selection[competenceId] = newCompetence;
+				
+				xp -= cout;
+				update_xp();
+				var competence = $(checkbox).siblings('span').clone();
+				var niveau = '<input class="niveau" type="range" min="1" max="3" value="1" currentValue="1" competenceId="'+competenceId+'" />';
+
+				$(competence).append("&nbsp;(<span class='niveau'>Niveau 1</span>)");
+				$(competence).append($(niveau));
+				$("#competenceList").append($(competence));
+				$(competence).wrap('<div class="competence_'+$(checkbox).attr('index')+'"></div>');
+				range_event();
 			}
+			else { // le joueur n'a pas assez de xp
+				$(checkbox).prop("checked", false);
+			}
+		};
+
+		// lorsqu'une competence est deselectionnée
+		var deselection_competence = function(checkbox) {
+			var competenceId = $(checkbox).attr('index');
+
+			var niveau = getCompetenceNiveau(competenceId);
+			cout = getCompetenceCout(competenceId,niveau);
+			xp += cout;
+			update_xp();
+			
+			$('div.competence_'+$(checkbox).attr('index')).remove();
+		};
+
+		var range_event = function(input) {
+			$('input.niveau[type="range"]').on('change', function() {
+				
+				var competenceId = $(this).attr('competenceId');
+				var oldNiveau = $(this).attr('currentValue');
+				var newNiveau = $(this).val();
+
+				console.log('changement du niveau de la competence ' + competenceId);
+				console.log('ancien niveau ' + oldNiveau);
+				console.log('nouveau niveau ' + newNiveau);
+
+				if ( newNiveau > oldNiveau )
+				{
+					var cout = getCompetenceCout(competenceId,newNiveau);
+					if ( xp - cout >= 0 )
+					{
+						xp-= cout;
+						update_xp();
+						$(this).attr('currentValue',newNiveau);
+						$(this).siblings('span.niveau').text('Niveau '+newNiveau);
+					}
+					else
+					{
+						$(this).val(oldNiveau);	
+					}
+				}
+				else if ( newNiveau < oldNiveau )
+				{
+					var cout = getCompetenceCout(competenceId,oldNiveau);
+					xp+= cout;
+					update_xp();
+					$(this).attr('currentValue',newNiveau);
+					$(this).siblings('span.niveau').text('Niveau '+newNiveau);
+				}
+			});
 		};
 		
 		// lorsque l'on choisi une classe, le panneau d'information de la classe doit ce mettre à jour
 		// de plus la/les compétences acquise à la création de cette classe doivent être cochée
 		jQuery(document).ready(function() {
+
+			// chargement de la classe pre-selectionnée
 			$("#personnage_classe option:selected").each(function() {
 				update_class_info($(this).val());
 				
 			});
+
+			// lorsque la classe change, on recharge les informations de la classe
 			$("#personnage_classe").on('change',function(){
 				update_class_info($(this).val());
 			});
 
+			// ecoute les événement de selection/deselection d'une competence
 			$('input.competence').on('change', function() {
-				if ($(this).is(':checked')) {
-					var competence = $(this).siblings('span').clone();
-					$("#competenceList").append($(competence));
-					$(competence).wrap('<div class="competence_'+$(this).attr('id')+'"></div>');
+				if ($(this).is(':checked')) {				
+					selection_competence($(this));
 				}
 				else {
-					$('div.competence_'+$(this).attr('id')).remove();
+					deselection_competence($(this));
 				}
-				
 			});
 		});
-
-		// lorsque l'on choisi une compétence, celle-ci doit fournir le niveau "apprentit" au joueur
-		// et mettre à jour son compte de XP en fonction de la classe (compétences favorites, normales, acquise à la création)
 		
 	</script>
 {% endblock javascript %}
