Refactorisation du systeme de compétence et de niveau.

--- a/src/LarpManager/Views/classe/detail.twig
+++ b/src/LarpManager/Views/classe/detail.twig
@@ -31,28 +31,28 @@
 	    		
 				<div class="list-group-item">
 	  				<h4 class="list-group-item-heading">
-	  					Compétences acquises à la création		
+	  					Famille de compétences acquises à la création		
 	  				</h4>
   					<p class="list-group-item-text">
-						{{ classe.competenceCreations|join(', ') }}
+						{{ classe.competenceFamilyCreations|join(', ') }}
   					</p>
   				</div>
   				
 				<div class="list-group-item">
 	  				<h4 class="list-group-item-heading">
-	  					Compétences favorites		
+	  					Famille de Compétences favorites		
 	  				</h4>
   					<p class="list-group-item-text">
-						{{ classe.competenceFavorites|join(', ') }}
+						{{ classe.competenceFamilyFavorites|join(', ') }}
   					</p>
   				</div>
   				
   				<div class="list-group-item">
 	  				<h4 class="list-group-item-heading">
-	  					Compétences normales		
+	  					Famille de compétences normales		
 	  				</h4>
   					<p class="list-group-item-text">
-						{{ classe.competenceNormales|join(', ') }}
+						{{ classe.competenceFamilyNormales|join(', ') }}
   					</p>
   				</div>
   				
