--- a/src/LarpManager/Views/classe/fragment/info.twig
+++ b/src/LarpManager/Views/classe/fragment/info.twig
@@ -7,13 +7,13 @@
 	</div>
 	<div class="list-group">
 		<div class="list-group-item">
-			Compétences acquises à la création : {{ classe.competenceCreations|join(', ') }}
+			Compétences acquises à la création : {{ classe.competenceFamilyCreations|join(', ') }}
 		</div>
 		<div class="list-group-item">
-			Compétences favorites : {{ classe.competenceFavorites|join(', ') }}
+			Compétences favorites : {{ classe.competenceFamilyFavorites|join(', ') }}
 		</div>
 		<div class="list-group-item">
-			Compétences normales : {{ classe.competenceNormales|join(', ') }}
+			Compétences normales : {{ classe.competenceFamilyNormales|join(', ') }}
 		</div>
 	</div>
 </div>
