--- a/src/LarpManager/Views/competence/update.twig
+++ b/src/LarpManager/Views/competence/update.twig
@@ -16,7 +16,10 @@
 
 			<div class="col-xs-12 col-md-4">
 				<h3>Niveaux</h3>	
-				{{ include("competence/fragment/niveau.twig",{'competence': competence,'add' : true}) }}
+				{{ include("competence/fragment/niveau.twig",{
+					'legend' : 'ajout d\'un niveau à une compétence',
+					'competence': competence,
+					'add' : true}) }}
 			</div>
 		</div>
 	</div>
