--- a/src/LarpManager/Views/level/add.twig
+++ b/src/LarpManager/Views/level/add.twig
@@ -1,15 +1,15 @@
 {% extends "layout.twig" %}
 
-{% block title %}Classes{% endblock title %}
+{% block title %}Niveaux{% endblock title %}
 
 {% block content %}
 
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				{{ include("niveau/fragment/form.twig",{
+				{{ include("level/fragment/form.twig",{
 					'legend': 'Ajout d\'un niveau',
-					'action': path('niveau.add'), 
+					'action': path('level.add'), 
 					'form' : form}) }}
 			</div>
 		</div>
