--- a/src/LarpManager/Views/level/detail.twig
+++ b/src/LarpManager/Views/level/detail.twig
@@ -8,18 +8,18 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-8">
 			
-			<a href="{{ path("niveau") }}">Retour à la liste des niveau</a>
+			<a href="{{ path("level") }}">Retour à la liste des niveau</a>
 						
 			<div class="well well-sm bs-component">
 				<h4>
-					{{ niveau.label }}
+					{{ level.label }}
 				</h4>
 			</div>
 			
 			<div class="list-group">
 				<div class="list-group-item">
   					<div class="btn-group" role="group" aria-label="...">
-  						<a  class="btn btn-primary" role="button" href="{{ path('niveau.update', {index : niveau.id}) }}">Modifier</a>
+  						<a  class="btn btn-primary" role="button" href="{{ path('level.update', {index : level.id}) }}">Modifier</a>
 					</div>
   				</div>
   			
