--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -45,9 +45,10 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Règles<span class="caret"></span></a>
 					<ul class="dropdown-menu">
+						<li><a href="{{ path('competence.family') }}">Famille de compétences</a></li>
+						<li><a href="{{ path('level') }}">Niveaux</a></li>
 						<li><a href="{{ path('competence') }}">Compétences</a></li>
 						<li><a href="{{ path('classe') }}">Classes</a></li>
-						<li><a href="{{ path('niveau') }}">Niveaux</a></li>
 						<li><a href="{{ path('age') }}">Ages</a></li>
 						<li><a href="{{ path('genre') }}">Genres</a></li>
 					</ul>
