--- a/src/LarpManager/Views/groupe/joueur.twig
+++ b/src/LarpManager/Views/groupe/joueur.twig
@@ -32,6 +32,13 @@
 							</div>
 							
 							<div class="list-group-item">
+								<h4 class="list-group-item-heading">Vos informations</h4>
+								<p class="list-group-item-text">
+									<a href="#">Mettre à jours vos informations</a>
+								</p>
+							</div>
+							
+							<div class="list-group-item">
 								<h4 class="list-group-item-heading">Responsable du groupe</h4>
 								<p class="list-group-item-text">
 									{% if app.user.isResponsable(groupe) %}
@@ -61,9 +68,8 @@
 										<p>Ce groupe ne contient pas encore de personnage, créez vite le votre !</p>
 									{% endif %}
 									
-									{% set personnage = app.user.personnageOn(groupe) %}
-									{% if personnage %}
-										Vous êtes <strong>{{ personnage.nom }} </strong>: {{ personnage.classe.label }} 
+									{% if app.user.joueur.personnage %}
+										Vous êtes <strong>{{ app.user.personnage.nom }} </strong>: {{ app.user.personnage.classe.label }} 
 									{% else %}
 										<a href="{{ path('groupe.personnage.add',{'index':groupe.id}) }}">Créer votre personnage</a>
 									{% endif %}
