--- a/src/LarpManager/Views/classe/fragment/info.twig
+++ b/src/LarpManager/Views/classe/fragment/info.twig
@@ -3,7 +3,7 @@
 		{{ classe.label }}
 	</div>
 	<div class="panel-body">
-		<p>{{ classe.description }}
+		<p>{{ classe.description }}</p>
 	</div>
 	<div class="list-group">
 		<div class="list-group-item">
